supermarket-istio.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: supermarket-gateway
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: supermarket
spec:
  hosts:
  - "*"
  gateways:
  - supermarket-gateway
  http:
  - route:
    - destination:
        host: discount
    corsPolicy:
      allowOrigin:
      - "*"
      allowMethods:
      - OPTIONS
      - GET
      allowCredentials: true
      allowHeaders:
      - "*"
